Shrinkwrap not taking auxiliary target into account properly #48547

Closed
opened 2016-05-30 08:12:52 +02:00 by Carlo Andreacchio · 7 comments

System Information
Windows 7 x64 GTX580

Blender Version
Broken: 999d5a6 onwards (including 11b0874)
Worked: b0a7e77

Short description of error
Shrinkwrap does not take auxiliary target into account properly

Exact steps for others to reproduce the error

  1. Open attached blend file in the git version provided
  2. Notice it is going up into the air
  3. revert git backwards
  4. open attached blend file
  5. notice how it sticks to the plane below
    shrinkwrapbug.blend
**System Information** Windows 7 x64 GTX580 **Blender Version** Broken: 999d5a6 onwards (including 11b0874) Worked: b0a7e77 **Short description of error** Shrinkwrap does not take auxiliary target into account properly **Exact steps for others to reproduce the error** 1. Open attached blend file in the git version provided 2. Notice it is going up into the air 3. revert git backwards 4. open attached blend file 5. notice how it sticks to the plane below [shrinkwrapbug.blend](https://archive.blender.org/developer/F315283/shrinkwrapbug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio
Campbell Barton self-assigned this 2016-05-30 14:51:19 +02:00

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

System Information
Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700
Windows 7 x64

Blender Version
Broken: 2.77 11b0874
Worked: 2.77a abf6f08

Short description of error
I can confirm there is a problem in latest builds and I have also found a couple of strange things:

  • If you enter Edit Mode on the bottom plane, shrinkwrap will start working.
  • It looks like that BOTTOM (Auxiliary) plane uses TOP (Target) plane’s dimensions as dimensions for shrinkwrapping! Changing the size of the top (Target) plane’s mesh seems to affect the bottom (Auxiliary) plane’s snapping for some reason.

You can take a look at my version of the test file, it's practically the same thing with planes, but some planes are changed to illustrate the issue I've found:

  • If you open my file in 2.77a, both small planes will shrinkwrap to both large planes.
  • If you open my file in latest build of 2.77, only closer one of the small planes will shrinkwrap to the bottom plane. Notice that closer plane does shrinkwrap because its top (Target) plane is bigger.
  • If you move the bottom (Auxiliary) plane left and right, you will also notice that far plane will eventually start shrinkwrapping too when bottom plane moves closer to its center.
    shrinkwrap_bug_1.blend
**System Information** Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700 Windows 7 x64 **Blender Version** Broken: 2.77 11b0874 Worked: 2.77a abf6f08 **Short description of error** I can confirm there is a problem in latest builds and I have also found a couple of strange things: - If you enter Edit Mode on the bottom plane, shrinkwrap will start working. - It looks like that BOTTOM (Auxiliary) plane uses TOP (Target) plane’s dimensions as dimensions for shrinkwrapping! Changing the size of the top (Target) plane’s mesh seems to affect the bottom (Auxiliary) plane’s snapping for some reason. You can take a look at my version of the test file, it's practically the same thing with planes, but some planes are changed to illustrate the issue I've found: - If you open my file in 2.77a, both small planes will shrinkwrap to both large planes. - If you open my file in latest build of 2.77, only closer one of the small planes will shrinkwrap to the bottom plane. Notice that closer plane does shrinkwrap because its top (Target) plane is bigger. - If you move the bottom (Auxiliary) plane left and right, you will also notice that far plane will eventually start shrinkwrapping too when bottom plane moves closer to its center. [shrinkwrap_bug_1.blend](https://archive.blender.org/developer/F315304/shrinkwrap_bug_1.blend)

Caused by 0b5a0d8412

Caused by 0b5a0d8412

This issue was referenced by 3ed5da0479

This issue was referenced by 3ed5da04791ec9568ae4d56ad8722f309431a1c5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48547
No description provided.