Fix T48547: Shrinkwrap fails w/ auxiliary target

Error in 0b5a0d84